Closed Bug 899230 Opened 11 years ago Closed 11 years ago

domUtils.getCSSValuesForProperty returns "logical" and "physical" which should not be in any list

Categories

(Core :: CSS Parsing and Computation, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla25

People

(Reporter: Optimizer, Assigned: almasry.mina)

References

(Blocks 1 open bug)

Details

Attachments

(1 file, 1 obsolete file)

These two values are present in various property list like border-width, border-color, etc. they should not be present as they do not work in websites and are not in spec.
The issue is the *-source properties...

Mina, I think we should just bail out of GetKeywordsForProperty if keywordTable is kBoxPropSourceKTable.  Make sense?
Flags: needinfo?(almasry.mina)
Attached patch Patch (obsolete) — Splinter Review
Ya that makes sense. Here is a patch. I still can't run mochitests (bug in mach) so here is a try push...?

https://tbpl.mozilla.org/?tree=Try&rev=40faa886af88
Assignee: nobody → almasry.mina
Status: NEW → ASSIGNED
Attachment #782933 - Flags: review?(bzbarsky)
Flags: needinfo?(almasry.mina)
Never mind someone on the IRC helped me with running the test without mach. It passes. Patch just needs a review then.
Comment on attachment 782933 [details] [diff] [review]
Patch

> +  if (keywordTable && (keywordTable != nsCSSProps::kBoxPropSourceKTable)) {

Drop the extra parens, please.

r=me
Attachment #782933 - Flags: review?(bzbarsky) → review+
Attachment #782933 - Attachment is obsolete: true
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/0eccf52bf215
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: