Bug 899230 - domUtils.getCSSValuesForProperty doesn't return "logical" and "physical" any list. r=bz

This patch prevents inIDOMUtils from returning logical and physical from any list.